workbook detail page styling done

--- a/blink_sass/_form.sass
+++ b/blink_sass/_form.sass
@@ -1,5 +1,5 @@
-.upload-area
-  background-color: #DDDDDD
+.upload-area, .gray-area
+  background-color: darken($white, 5%)
   padding: 15px
 
 .form-control
