--- a/blink_sass/pages/_page.sass
+++ b/blink_sass/pages/_page.sass
@@ -2,14 +2,22 @@
   background: $white
   margin-bottom: 20px
   padding: 0
-  text-transform: capitalize
+
+  .container
+    padding: 15px
+  .btn.pull-right
+    margin-top: 5px
+
+  .page-action-group
+    margin-bottom: 0
 
 .page-header
   font-size: $font-size-h3
-  margin: 0 0 20px 0
+  margin: 15px 0
   padding-bottom: 0
   border-bottom: none
   color: $isb-primary
+  text-transform: capitalize
 
 .page-action-group
   padding: 5px 0
