--- a/templates/GenespotRE/dashboard.html
+++ b/templates/GenespotRE/dashboard.html
@@ -9,7 +9,9 @@
 {% block page_name %}dashboard{% endblock %}
 
 {% block page_header %}
+<div class="container">
     <h1 class="page-header">Your Dashboard</h1>
+</div>
 {% endblock %}
 {% block content %}
 <div class="container">
