--- a/templates/projects/project_list.html
+++ b/templates/projects/project_list.html
@@ -9,11 +9,13 @@
 {% block page_name %}project_list{% endblock %}
 
 {% block page_header %}
+<div class="container">
     <ol class="breadcrumb">
         <li><a href="{% url 'dashboard' %}">Your Dashboard</a></li>
     </ol>
     <h1 class="page-header pull-left">Projects</h1>
     <a href="{% url 'project_upload' %}" class="btn btn-primary pull-right"><i class="fa fa-cloud-upload"></i>Upload Data</a>
+</div>
 {% endblock %}
 {% block content %}
 <div class="container">
