--- a/templates/workbooks/workbook_modals.html
+++ b/templates/workbooks/workbook_modals.html
@@ -30,8 +30,9 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Delete this Workbook?</h4>
+                <h4 class="modal-title"></h4>
             </div>
+            <div class="modal-body">Delete this Workbook?</div>
             <form id="delete-workbook" method="POST" action="{% url 'workbook_delete' workbook.id %}">
                 {% csrf_token %}
                 <div class="modal-footer">
@@ -109,7 +110,10 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Duplicate this Workbook?</h4>
+                <h4 class="modal-title"></h4>
+            </div>
+            <div class="modal-body">
+                Duplicate this Workbook?
             </div>
             <form id="copy-workbook" method="POST" action="{% url 'workbook_copy' workbook.id %}">
                 {% csrf_token %}
