--- a/templates/workbooks/worksheet_modals.html
+++ b/templates/workbooks/worksheet_modals.html
@@ -4,13 +4,16 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Duplicate this Worksheet "{{ worksheet.name }}"?</h4>
+                <h4 class="modal-title"></h4>
+            </div>
+            <div class="modal-body">
+                Duplicate this Worksheet "{{ worksheet.name }}"?
             </div>
             <form id="copy-workbook" method="POST" action="{% url 'worksheet_copy' workbook.id worksheet.id %}">
                 {% csrf_token %}
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                     <input type="submit" value="Duplicate" class="btn btn-primary" />
+                    <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
                 </div>
             </form>
         </div>
@@ -23,13 +26,16 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Delete this Worksheet "{{ worksheet.name }}"?</h4>
+                <h4 class="modal-title"></h4>
+            </div>
+            <div class="modal-body">
+                Delete this Worksheet "{{ worksheet.name }}"?
             </div>
             <form id="delete-workbook" method="POST" action="{% url 'worksheet_delete' workbook.id worksheet.id %}">
                 {% csrf_token %}
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                     <input type="submit" value="Delete" class="btn btn-primary" />
+                    <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
                 </div>
             </form>
         </div>
@@ -54,8 +60,8 @@
                     <textarea class="form-control" name="description">{{worksheet.description }}</textarea>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                     <input type="submit" value="Update" class="btn btn-primary" />
+                    <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
                 </div>
             </form>
         </div>
