--- a/static/templates/upload_input_table.html
+++ b/static/templates/upload_input_table.html
@@ -27,8 +27,8 @@
                             <option value="float" <%- !column.controlled && column.type == 'float' ? 'selected' : '' %>>Decimal</option>
                             <option value="string" <%- !column.controlled && (column.type == 'int' || column.type == 'float') ? '' : 'selected' %>>Categorical</option>
                             <optgroup label="Barcodes">
-                                <option value="sample" <%- column.controlled && column.controlled.key == 'SampleBarcode' ? 'selected' : '' %>>Sample Barcode</option>
-                                <option value="participant" <%- column.controlled && column.controlled.key == 'ParticipantBarcode' ? 'selected' : '' %>>Participant Barcode</option>
+                                <option value="sample" <%- column.controlled && column.controlled.key == 'sample_barcode' ? 'selected' : '' %>>Sample Barcode</option>
+                                <option value="participant" <%- column.controlled && column.controlled.key == 'participant_barcode' ? 'selected' : '' %>>Participant Barcode</option>
                             </optgroup>
                             <optgroup label="Dictionary Datatypes">
                                 <% _.each(dictionary, function (item) { %>
