--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -90,20 +90,20 @@
                                                         {% if forloop.counter0 < 6 %}
                                                             <li>
                                                                 <input type="checkbox" name="elements-selected" id="{{ attr }}-{{ v.value|replace_whitespace:'_' }}" >
-                                                                <label for="{{ attr }}-{{ v.value|replace_whitespace:'_' }}">{% if v.value == 'None' %}NA{% else %}{{ v.value }}{% endif %}</label>
+                                                                <label for="{{ attr }}-{{ v.value|replace_whitespace:'_' }}">{% if v.value == 'None' %}NA{% else %}{{ v.value|get_readable_name }}{% endif %}</label>
                                                                 <span class="count">({{ v.count }})</span>
                                                             </li>
                                                         {% elif forloop.counter0 == 6 and num_more > 0 %}
                                                             <a class="show-more">{{ num_more }} more</a>
                                                             <li class="extra-values" style="display:none;">
                                                                 <input type="checkbox" name="elements-selected" id="{{ attr }}-{{ v.value|replace_whitespace:'_' }}" >
-                                                                <label for="{{ attr }}-{{ v.value|replace_whitespace:'_' }}">{% if v.value == 'None' %}NA{% else %}{{ v.value }}{% endif %}</label>
+                                                                <label for="{{ attr }}-{{ v.value|replace_whitespace:'_' }}">{% if v.value == 'None' %}NA{% else %}{{ v.value|get_readable_name }}{% endif %}</label>
                                                                 <span class="count">({{ v.count }})</span>
                                                             </li>
                                                         {% else %}
                                                             <li class="extra-values" style="display:none;">
                                                                 <input type="checkbox" name="elements-selected" id="{{ attr }}-{{ v.value|replace_whitespace:'_' }}" >
-                                                                <label for="{{ attr }}-{{ v.value|replace_whitespace:'_' }}">{% if v.value == 'None' %}NA{% else %}{{ v.value }}{% endif %}</label>
+                                                                <label for="{{ attr }}-{{ v.value|replace_whitespace:'_' }}">{% if v.value == 'None' %}NA{% else %}{{ v.value|get_readable_name }}{% endif %}</label>
                                                                 <span class="count">({{ v.count }})</span>
                                                             </li>
                                                         {% endif %}
