--- a/templates/GenespotRE/user_detail_saml.html
+++ b/templates/GenespotRE/user_detail_saml.html
@@ -40,5 +40,8 @@
             <a data-toggle="modal" data-target="#bucket-contents-modal">View bucket contents</a>
         </p>
     {% endif %}
-
+    <script type="text/javascript"> 
+            var NIH_assertion_expiration_client_time = new Date("{{ user_details.NIH_assertion_expiration|safe }}");
+            document.getElementById('NIH_expiration').innerHTML = NIH_assertion_expiration_client_time; 
+    </script>
 {%  endblock %}
