--- a/templates/GenespotRE/user_detail.html
+++ b/templates/GenespotRE/user_detail.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% load custom_tags %}
 {% load tz %}
-
+{% get_current_timezone as TIME_ZONE %}
 {% comment %}
 
    Copyright 2015, Institute for Systems Biology
@@ -59,7 +59,6 @@
                         <td>Last Logged In</td>
                         <td id="last_login">{{ user_details.last_login|safe }} GMT</td>
                     </tr>
-
                 </table>
             </div>
         </div>
@@ -181,7 +180,10 @@
             </div>
         </div>
     </div>
-
+    <script type="text/javascript"> 
+            var last_login_client_time = new Date("{{ user_details.last_login|safe }}");
+            document.getElementById('last_login').innerHTML = last_login_client_time; 
+    </script>
 {% endblock %}
 
 {% block js_file %}{% static 'js/user_details.js' %}{% endblock %}
