fixed comment section on workbooks

--- a/blink_sass/components/_tab.sass
+++ b/blink_sass/components/_tab.sass
@@ -123,7 +123,7 @@
                 background: $white
             .dropdown-container > a
                 color: $isb-warning
-                pointer-events: auto
+                display: inline-block
         
         > a
             color: $font-color
@@ -136,10 +136,10 @@
 
         .dropdown-container
             display: inline-block
-            margin-right: 10px
             > a
                 color: $font-color
-                pointer-events: none
+                padding: 5px
+                display: none
 
         .btn
             background: transparent
