--- a/blink_sass/components/_flyout.sass
+++ b/blink_sass/components/_flyout.sass
@@ -40,12 +40,15 @@
         .comment-username
             font-weight: bold
             font-size: 14px
-            margin: 0px
+            margin-bottom: 5px
         .comment-date
             font-size: 12px
-            color: $link-color
+            color: lighten($isb-dark, 10%)
+            margin-bottom: 0
+            text-align: right
         .comment-content
             background-color: $primary-color-xlight
             border-radius: 5px
             padding: 5px 10px
             color: $link-color
+            margin-bottom: 0
