Project list animations and toggle change

--- a/templates/projects/project_list.html
+++ b/templates/projects/project_list.html
@@ -50,7 +50,7 @@
                                         <li><a role="button">Delete</a></li>
                                         <li><a href="">New Workbook</a></li>
                                     </ul>
-                                    <span class="row-expand-button"><i class="fa fa-plus"></i></span>
+                                    <span class="row-expand-button"></span>
                                 </div>
                             </td>
                             <td class="name-col"><a href="{% url 'project_detail' project.id %}">{{ project.name }}</a></td>
@@ -110,7 +110,7 @@
                                     <ul class="dropdown-menu">
                                         <li><a href="">New Workbook</a></li>
                                     </ul>
-                                    <span class="row-expand-button"><i class="fa fa-plus"></i></span>
+                                    <span class="row-expand-button"></span>
                                 </div>
                             </td>
                             <td class="name-col"><a href="{% url 'project_detail' project.id %}">{{ project.name }}</a></td>
