Enable editing for projects/studies
Also switch to a different kind of modals for delete confirmation because they look nicer

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1299,6 +1299,12 @@ nav {
   #save-projects-list .table .study .name-col .fa, #public-projects-list .table .study .name-col .fa {
     padding-right: 8px; }
 
+.project-study .dropdown {
+  margin-right: 12px; }
+
+.project-study h4 {
+  margin-top: 2px; }
+
 body {
   -webkit-transition: all 0.4s ease-in;
   transition: all 0.4s ease-in; }
