--- a/templates/projects/project_detail.html
+++ b/templates/projects/project_detail.html
@@ -19,28 +19,28 @@
         <li role="menuitem"><button class="btn btn-default">New Workbook</button></li>
         <li class="separator"></li>
         <li role="menuitem"><a href="{% url 'project_upload' %}" class="btn btn-info"><i class="fa fa-cloud-upload"></i>Upload Data</a></li>
-        <li role="menuitem"><button class="btn btn-info">Edit Details</button></li>
-        <li role="menuitem"><button class="btn btn-info project-delete" data-url="{% url 'project_delete' project.id %}" data-redirect="{% url 'projects' %}">Delete</button></li>
+        <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target="#edit-project-details-modal">Edit Details</button></li>
+        <li role="menuitem"><button class="btn btn-info project-delete" data-toggle="modal" data-target="#delete-project-modal">Delete</button></li>
         <li class="separator"></li>
-        <li role="menuitem"><button class="btn btn-info">Share</button></li>
-        <li role="menuitem"><button class="btn btn-link">Shared with (2)</button></li>
+        <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target="#share-project-modal">Share</button></li>
+        <li role="menuitem"><button class="btn btn-link" data-toggle="modal" data-target="#share-project-modal">Shared with (2)</button></li>
     </ul>
 {% endblock %}
 {% block content %}
     <div class="container">
         <div class="error-messages"></div>
         {% for study in studies %}
-        <section class="project-study panel panel-primary">
+        <section class="project-study panel panel-primary" data-study-id="{{ study.id }}">
             <div class="panel-heading clearfix">
-                <h4 class="panel-title pull-left">{{ study.name }}</h4>
-                <div class="dropdown pull-right">
+                <div class="dropdown pull-left">
                     <a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-gear"></i></a>
                     <ul class="dropdown-menu">
                         <li role="menuitem"><a href="">New Workbook</a></li>
-                        <li role="menuitem"><a href="">Edit Details</a></li>
-                        <li role="menuitem"><a data-url="{% url 'study_delete' project_id=project.id study_id=study.id %}" class="study-delete" role="button">Delete</a></li>
+                        <li role="menuitem"><a data-toggle="modal" data-target="#edit-study-details-modal-{{ study.id }}">Edit Details</a></li>
+                        <li role="menuitem"><a data-toggle="modal" data-target="#delete-study-modal-{{ study.id }}" class="study-delete">Delete</a></li>
                     </ul>
                 </div>
+                <h4 class="panel-title pull-left">{{ study.name }}</h4>
             </div>
             <div class="panel-body">
                 {% if study.get_status == 'Processing' %}
@@ -69,9 +69,12 @@
                 </dl>
             </div>
         </section>
+        {% include "projects/study_modals.html" %}
         {% endfor %}
 
     </div>
+
+    {% include "projects/project_modals.html" %}
 {% endblock %}
 
 {% block js_file %}{% static 'js/project_details.js' %}{% endblock %}
