check in workbook styles

--- a/blink_sass/components/_flyout.sass
+++ b/blink_sass/components/_flyout.sass
@@ -52,3 +52,7 @@
             padding: 5px 10px
             color: $link-color
             margin-bottom: 0
+            &.error
+              background-color: $danger-bgcolor
+              color: $danger-bgcolor-dark
+              margin: 10px 0
