--- a/templates/workbooks/workbook.html
+++ b/templates/workbooks/workbook.html
@@ -19,12 +19,22 @@
     <h1 class="page-header">{{ workbook.name }}</h1>
     <p>{{ workbook.description }}</p>
     <ul class="page-action-group">
+        {% if workbook.owner.id == request.user.id %}
         <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target="#edit-workbook-details-modal">Edit Details</button></li>
         <li role="menuiem"><button class="btn btn-info" data-toggle="modal" data-target="#copy-workbook-modal">Duplicate</button></li>
         <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target="#delete-workbook-modal">Delete</button></li>
         <li class="separator"></li>
         <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target="#share-workbook-modal">Share</button></li>
         <li role="menuitem"><button class="btn btn-link" data-toggle="modal" data-target="#share-workbook-modal">Shared with ({{ workbook.shares | length }})</button></li>
+        {% else %}
+        <li><h5>Owner: {{ workbook.owner.first_name|title }} {{ workbook.owner.last_name|title }}</h5></li>
+        <li class="separator"></li>
+        <li role="menuiem"><button class="btn btn-info" data-toggle="modal" data-target="#copy-workbook-modal">Duplicate</button></li>
+        <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target="#delete-workbook-modal">Remove</button></li>
+        <li class="separator"></li>
+        <li role="menuitem"><button class="btn btn-link" data-toggle="modal" data-target="#share-workbook-modal">Shared with ({{ workbook.shares | length }})</button></li>
+        {% endif %}
+
     </ul>
 </div>
 {% endblock %}
@@ -36,23 +46,33 @@
         <ul class="nav nav-tabs_excel" id="worksheets">
             <!-- for each worksheet in workbook -->
             {% for worksheet in workbook.worksheets %}
-                 <li class="{% if forloop.counter == 1 %} active {% endif %} dropdown">
-                     <a href="#{{ worksheet.id }}" data-toggle="tab">{{ worksheet.name }}</a>
-                     <div class="dropdown-container">
-                         <a class="dropdown-toggle worksheet-drop" role="button" data-toggle="dropdown"><i class="fa fa-caret-down" ></i></a>
+                {% if forloop.counter < 4 %}
+                    <li class="{% if forloop.counter == 1 %} active {% endif %}">
+                         <a href="#{{ worksheet.id }}" data-toggle="tab">{{ worksheet.name }}</a>
+                         {% if workbook.owner.id == request.user.id %}
+                         <div class="dropdown">
+                             <a class="dropdown-toggle worksheet-drop" role="button" data-toggle="dropdown"><i class="fa fa-caret-down" ></i></a>
 
-                         <ul class="dropdown-menu">
-                            {% if workbook.owner.id == request.user.id %}
+                             <ul class="dropdown-menu">
                                 <li role="menuitem"><a data-toggle="modal" role="button" data-target="#edit-worksheet-details-modal-{{ worksheet.id }}">Edit details</a></li>
                                 <li role="menuitem"><a data-toggle="modal" role="button" data-target="#copy-worksheet-modal-{{ worksheet.id }}">Duplicate</a></li>
                                 {% if workbook.worksheets|length > 1 %}
                                     <li role="menuitem"><a data-toggle="modal" role="button" data-target="#delete-worksheet-modal-{{ worksheet.id }}">Delete</a></li>
                                 {% endif %}
-                            {% endif %}
-                         </ul>
-                     </div>
-                 </li>
+                             </ul>
+                         </div>
+                         {% endif %}
+                    </li>
+                {% elif forloop.counter == 4  %}
+                    <li class="dropdown">
+                        <button class="btn btn-symbol" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-ellipsis-h"></i></button>
+                        <ul class="dropdown-menu">
+                            <li><a href="#{{ worksheet.id }}" data-toggle="tab">{{ worksheet.name }}</a></li>
+                        </ul>
+                    </li>
+                {% endif %}
             {% endfor %}
+
             <li>
                 <form id="worksheet_create_form" method="POST" action="{% url 'worksheet_create' workbook_id=workbook.id %}">
                     {% csrf_token %}
@@ -84,17 +104,38 @@
                                     </div>
                                     <ul class="list-item__body">
                                         <li class="sublist-item">
+                                            THIS
+                                        </li>
+                                        <li class="sublist-item">IS</li>
+                                        <li class="sublist-item">AN</li>
+                                        <li class="sublist-item">
+                                            EXAMPLE
+                                        </li>
+                                        <li class="sublist-item">
                                             BRCA1
                                         </li>
                                         <li class="sublist-item">
                                             PTEN
                                         </li>
+                                        <a class="show-more">Show More</a>
+                                        <li class="extra-values sublist-item">ABCD1</li>
+                                        <a class="show-less" style="display:none;">Show Less</a>
                                     </ul>
                                     {% if worksheet.gene_list %}
                                     <ul class="list-item__body">
-                                        {% for gene in worksheet.gene_list %}
-                                            <li class="sublist-item">{{ gene.name|upper }}</li>
-                                        {% endfor %}
+                                        {% with worksheet.gene_list|how_many_more:6 as num_more  %}
+                                            {% for gene in worksheet.gene_list %}
+                                                {% if forlook.counter0 < 6 %}
+                                                    <li class="sublist-item">{{ gene.name|upper }}</li>
+                                                {% elif forloop.counter0 == 6 and num_more > 0 %}
+                                                    <a class="show-more">{{num_more}} more</a>
+                                                    <li class="extra-values sublist-item">{{ gene.name|upper }}</li>
+                                                {% endif %}
+                                            {% endfor %}
+                                            {% if num_more > 0 %}
+                                                <a class="show-less" style="display:none;">Show Less</a>
+                                            {% endif %}
+                                        {% endwith %}
                                     </ul>
                                     {% endif %}
                                 </li>
