added spinner to cohort file list page

--- a/sass/cohorts.sass
+++ b/sass/cohorts.sass
@@ -318,6 +318,11 @@
         .page-num, .file-count
             display: inline-block
 
+        .spinner
+            font-size: 24px
+            margin-left: 5px
+            vertical-align: middle
+
         table
             table-layout: fixed
             word-break: break-all
