--- a/templates/cohorts/cohort_filelist.html
+++ b/templates/cohorts/cohort_filelist.html
@@ -74,8 +74,11 @@
             </div>
             <div class="panel-body">
                 <p>Showing 20 files of <span class="file-count">{{ file_count }}</span>. Page: <span class="page-num">{{ page }}</span></p>
-                <a role="button" id="prev-page" class="btn btn-default disabled">Previous Page</a>
-                <a role="button" id="next-page" class="btn btn-default">Next Page</a>
+                <div>
+                    <a role="button" id="prev-page" class="btn btn-default disabled">Previous Page</a>
+                    <a role="button" id="next-page" class="btn btn-default">Next Page</a>
+                    <span class="spinner"><i class="fa fa-spin fa-spinner hidden"></i></span>
+                </div>
                 <table class="table table-striped" aria-label="File Listing Table">
                     <thead>
                     <tr>
