--- a/blink_sass/components/_panel.sass
+++ b/blink_sass/components/_panel.sass
@@ -2,6 +2,9 @@
   box-shadow: $box-shadow
   border: none
 
+  &-invisible
+    margin-bottom: 30px
+
   &-heading
     a:hover
       color: inherit
