--- a/templates/projects/project_modals.html
+++ b/templates/projects/project_modals.html
@@ -54,7 +54,7 @@
                     {% if project.owner == request.user %}
                         <li class="active"><a href="#share" data-toggle="tab">Share</a></li>
                     {% endif %}
-                    <li ><a href="#shared-with" data-toggle="tab">Shared With</a></li>
+                    <li class="{% if not project.owner == request.user %}active{% endif %}"><a href="#shared-with" data-toggle="tab">Shared With</a></li>
                 </ul>
             </div>
             <div class="tab-content">
@@ -71,9 +71,9 @@
                     </div>
                 </form>
                 {% endif %}
-                <div class="tab-pane fade" id="shared-with">
+                <div class="tab-pane fade {% if not project.owner == request.user %}active in{% endif %}" id="shared-with">
                     <div class="modal-body">
-                        {% if project.shares|length > 0 %}
+                        {% if project.shared.count > 0 %}
                         <table class="table table-striped">
                             <thead>
                                 <tr>
@@ -82,10 +82,16 @@
                                 </tr>
                             </thead>
                             <tbody>
-                            {% for user in shared_with_users %}
+                            {% for shared in project.shared.all %}
                                 <tr>
-                                    <td>{{user.first_name}} {{user.last_name}}</td>
-                                    <td>{{user.email}}</td>
+                                    <td>
+                                        {% if shared.matched_user %}
+                                        {{shared.matched_user.first_name}} {{shared.matched_user.last_name}}
+                                        {% endif %}
+                                    </td>
+                                    <td>
+                                        {{shared.email}}
+                                    </td>
                                 </tr>
                             {% endfor %}
                             </tbody>
