--- a/templates/projects/project_list.html
+++ b/templates/projects/project_list.html
@@ -62,7 +62,7 @@
                             {% else %}
                                 {{ project.owner.first_name }} {{ project.owner.last_name }}
                             {% endif %}</td>
-                            <td>(0)</td>
+                            <td>({{ project.shared.count }})</td>
                             <td>{{ project.last_date_saved|date:"SHORT_DATETIME_FORMAT" }}</td>
                         {% for study in project.study_set.all %}
                         {% if study.active %}
