modified more tabs for workbook

--- a/blink_sass/components/_tab.sass
+++ b/blink_sass/components/_tab.sass
@@ -82,11 +82,12 @@
 
     > li
         display: inline-block
+        float: left
+        margin-right: 4px
         border-bottom: none
         border-radius: 2px
         height: 100%
         position: relative
-        clear: both
         vertical-align: top
         background: darken($white, 8%)
         
