--- a/templates/variables/variable_list.html
+++ b/templates/variables/variable_list.html
@@ -24,48 +24,40 @@
             
         </div>
         <div class="panel-body">
-            <table class="table table-stripe">
-                <thead>
-                    <tr>
-                        <th></th>
-                        <th>Name</th>
-                        <th># of Variables</th>
-                        <th>Last Updated</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td class="control-col">
-                            <div class="dropdown">
-                                <a data-target="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-caret-down"></i></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="{% url 'variable_fav_edit' 0 %}">Edit</a> </li>
-                                    <li><a role="button">Delete</a></li>
-                                    <li><a href="">New Workbook</a></li>
-                                </ul>
-                            </div>
-                        </td>
-                        <td><a href="{% url 'variable_fav_detail' 0 %}">My Favorite Variables 1</a></td>
-                        <td>1</td>
-                        <td>10/15/2015</td>
-                    </tr>
-                    <tr>
-                        <td class="control-col">
-                            <div class="dropdown">
-                                <a data-target="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-caret-down"></i></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="{% url 'variable_fav_edit' 0 %}">Edit</a> </li>
-                                    <li><a role="button">Delete</a></li>
-                                    <li><a href="">New Workbook</a></li>
-                                </ul>
-                            </div>
-                        </td>
-                        <td><a href="{% url 'variable_fav_detail' 0 %}">My Favorite Variables 2</a></td>
-                        <td>15</td>
-                        <td>10/15/2015</td>
-                    </tr>
-                </tbody>
-            </table>
+            {% if variable_list %}
+                <table class="table table-stripe">
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>Name</th>
+                            <th># of Variables</th>
+                            <th>Last Updated</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for favorite in variable_list %}
+                            <tr>
+                                <td class="control-col">
+                                    <div class="dropdown">
+                                        <a data-target="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-caret-down"></i></a>
+                                        <ul class="dropdown-menu">
+                                            <li><a href="{% url 'variable_fav_edit' favorite.id %}">Edit</a> </li>
+                                            <li data-toggle="modal" role="button" data-target="#delete-favorite-modal-{{ favorite.id }}" role="button">Delete</li>
+                                            <li data-toggle="modal" role="button" data-target="#new-favorite-workbook-modal-{{ favorite.id }}" role="button">Start New Workbook</a></li>
+                                        </ul>
+                                    </div>
+                                </td>
+                                <td><a href="{% url 'variable_fav_detail' favorite.id %}">{{ favorite.name }}</a></td>
+                                <td>{{ favorite.variables | length }}</td>
+                                <td>{{ favorite.last_date_saved }}</td>
+                            </tr>
+                            {% include "variables/variable_list_modals.html" with favorite=favorite %}
+                        {% endfor %}
+                    </tbody>
+                </table>
+            {% else %}
+                <p>You don't have any saved variable favorites yet</p>
+            {% endif %}
         </div>
     </section>
 </div>
